--- a/public_comment/organizations/templates/organizations/user_update.html
+++ b/public_comment/organizations/templates/organizations/user_update.html
@@ -7,7 +7,7 @@
 
 {% block breadcrumbs %}
     {% clear_breadcrumbs %}
-    {% breadcrumb "Home" "/" %}
+    {% breadcrumb "Home" "org-index" request.user.organization.slug %}
     {% breadcrumb "Account" "account" %}
     {% breadcrumb "Edit User" "" %}
 {% endblock %}
