--- a/public_comment/comments/templates/comments/comment_detail.html
+++ b/public_comment/comments/templates/comments/comment_detail.html
@@ -58,6 +58,10 @@
                     </td>
                 </tr>
                 <tr>
+                    <th scope="row">Tracking Number</th>
+                    <td>{{ object.tracking_number }}</td>
+                </tr>
+                <tr>
                     <th scope="row">Comment</th>
                     <td>{{ object.comment }}</td>
                 </tr>
