--- a/public_comment/comments/templates/comments/document_detail.html
+++ b/public_comment/comments/templates/comments/document_detail.html
@@ -28,7 +28,7 @@
             <tbody>
                 <tr>
                     <th scope="row">URL</th>
-                    <td><a href="https://regulations.gov/document/{{ object.document_id }}">https://regulations.gov/document/{{ object.document_id }}</a></td>
+                    <td><a href="{{ object.url }}">{{ object.url }}</a></td>
                 </tr>
                 <tr>
                     <th scope="row">Accepting comments?</th>
