--- a/public_comment/comments/templates/comments/document_detail.html
+++ b/public_comment/comments/templates/comments/document_detail.html
@@ -96,6 +96,10 @@
                     </td>
                 </tr>
                 <tr>
+                    <th scope="row">Suggested Comment</th>
+                    <td>{{ object.suggested_comment }}</td>
+                </tr>
+                <tr>
                     <th scope="row">Comment mode</th>
                     <td>
                         {% if object.client_mode == "T" %}
