--- a/public_comment/comments/templates/base.html
+++ b/public_comment/comments/templates/base.html
@@ -25,7 +25,9 @@
             <a class="navbar-brand" href="{% url 'index' %}">Public Commenter</a>
           {% endif %}
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+</svg></span>
           </button>
 
           {% if request.user.organization.slug %}
