--- a/public_comment/comments/templates/comments/comment_form.html
+++ b/public_comment/comments/templates/comments/comment_form.html
@@ -66,7 +66,7 @@
             <p><strong>Currently using the staging API. Comment will be submitted to <a href="https://staging.regulations.gov" target="_parent">staging.regulations.gov</a>, not the public commenting site. This should only be the case when testing or developing.</strong></p>
         {% endif %}
 
-        <p>Regulations.gov <a href="https://www.regulations.gov/user-notice" target="_parent">terms of participation</a> | Regulations.gov <a href="https://www.regulations.gov/privacy-notice" target="_parent">privacy notice</a></p>
+        <p>Regulations.gov <a href="https://www.regulations.gov/user-notice" target="_parent">terms of participation</a> | Regulations.gov <a href="https://www.regulations.gov/privacy-notice" target="_parent">privacy notice</a> | Do not submit personally identifiable information via this form. Submitted information will be publicly available on <a href="regulations.gov">regulations.gov</a>.  </p>
     </div>
 
     <script nonce="{{request.csp_nonce}}">
